Fixing the alignment of the images in the masthead

--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -30,6 +30,5 @@ body * a {
 @media (min-width: $desktop_min_width) {
   .container {
     @include container-desk;
-    overflow: hidden;
   }
 }
