--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -55,8 +55,7 @@ body * a {
   .container {
     margin-inline-end: auto;
     margin-inline-start: auto;
-    max-width: 1170px;
-    overflow: hidden; } }
+    max-width: 1170px; } }
 
 .footer_heading {
   font-family: 'DM Serif Display';
@@ -266,21 +265,46 @@ body > input[type="checkbox"]:checked ~ .site_header .label_menu {
 
 .images_sample {
   padding-block-start: 82px;
-  padding-block-end: 92px;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  column-gap: 9px;
-  row-gap: 9px; }
+  padding-block-end: 92px; }
 
-picture {
-  position: relative;
-  display: block; }
+.images_container li:nth-child(4),
+.images_container li:nth-child(5),
+.images_container li:nth-child(6),
+.images_container li:nth-child(7),
+.images_container li:nth-child(8) {
+  display: none; }
 
-.images_sample picture img {
+.images_sample picture img,
+.images_sample ul li img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
   border-radius: 5px; }
 
-.images_sample .image_1 {
-  grid-column: 1 / 6; }
+.images_container {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  width: 100%;
+  height: calc(50vw - 85px);
+  column-gap: 9px; }
+
+.images_sample .images_container li:nth-child(1) {
+  grid-column: 1 / 3; }
+
+.images_sample .images_container li:nth-child(2) {
+  grid-column: 3 / 5; }
+
+.images_sample .images_container li:nth-child(3) {
+  grid-column: 5 / 6;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: calc(100% + calc(((19 + 15) * 100%) / 215));
+  height: 100%; }
+
+.images_sample .images_container li:nth-child(3) img {
+  border-radius: 5px 0px 0px 5px; }
 
 .masthead_list {
   display: grid;
@@ -325,7 +349,25 @@ picture {
     grid-row: 1 / 7; }
   .images_sample {
     padding-block-end: 0px;
-    padding-block-start: 69px; } }
+    padding-block-start: 69px; }
+  .images_container {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    column-gap: 11px; }
+  .images_container li:nth-child(2) {
+    grid-column: 2 / 3; }
+  .images_container li:nth-child(4),
+  .images_container li:nth-child(5),
+  .images_container li:nth-child(6),
+  .images_container li:nth-child(7),
+  .images_container li:nth-child(8) {
+    display: block; }
+  .images_sample {
+    display: flex;
+    flex-direction: column; }
+    .images_sample .images_container li img {
+      width: 137px;
+      height: 85px; } }
 
 .footer_heading {
   font-family: 'DM Serif Display';
